// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar should apply fixed class 1`] = `
<div
  className="nav-bar fixed"
/>
`;

exports[`NavBar should apply no shadow class 1`] = `
<div
  className="nav-bar no-shadow"
/>
`;

exports[`NavBar should apply shy class 1`] = `
<div
  className="nav-bar fixed shy"
/>
`;

exports[`NavBar should apply the hidden class once scrolled 1`] = `
<Memo(NavBar)
  shy={true}
>
  <div
    className="nav-bar fixed shy"
  />
</Memo(NavBar)>
`;

exports[`NavBar should apply the hidden class once scrolled 2`] = `
<Memo(NavBar)
  shy={true}
>
  <div
    className="nav-bar fixed shy hidden"
  />
</Memo(NavBar)>
`;

exports[`NavBar should hide or show the navbar when scrolled 1`] = `
<Memo(NavBar)
  shy={true}
>
  <div
    className="nav-bar fixed shy"
  />
</Memo(NavBar)>
`;

exports[`NavBar should hide or show the navbar when scrolled 2`] = `
<Memo(NavBar)
  shy={true}
>
  <div
    className="nav-bar fixed shy"
  />
</Memo(NavBar)>
`;

exports[`NavBar should hide or show the navbar when scrolled 3`] = `
<Memo(NavBar)
  shy={true}
>
  <div
    className="nav-bar fixed shy"
  />
</Memo(NavBar)>
`;

exports[`NavBar should hide or show the navbar when scrolled 4`] = `
<Memo(NavBar)
  shy={true}
>
  <div
    className="nav-bar fixed shy hidden"
  />
</Memo(NavBar)>
`;

exports[`NavBar should hide or show the navbar when scrolled 5`] = `
<Memo(NavBar)
  shy={true}
>
  <div
    className="nav-bar fixed shy"
  />
</Memo(NavBar)>
`;

exports[`NavBar should hide or show the navbar when scrolled 6`] = `
<Memo(NavBar)
  shy={true}
>
  <div
    className="nav-bar fixed shy"
  />
</Memo(NavBar)>
`;

exports[`NavBar should match snapshot 1`] = `
<div
  className="nav-bar"
/>
`;

exports[`NavBar should take regular element attributes 1`] = `
<div
  className="nav-bar my-class"
/>
`;
